fix repeated device addition

--- a/custom_components/peacefair_energy_monitor/translations/en.json
+++ b/custom_components/peacefair_energy_monitor/translations/en.json
@@ -1,5 +1,8 @@
 {
     "config": {
+        "error": {
+            "device_exist": "The device exist, choice another one"
+        },
         "step": {
             "user": {
                 "data": {
